--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-MONGO_URI='mongodb+srv://profile2:profile2@cluster0.9vj2c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+MONGO_URI='mongodb+srv://okbhai1023:okbhai1023@profile2.y17qi.mongodb.net/?retryWrites=true&w=majority&appName=profile2'
 CLOUDINARY_CLOUD_NAME='ddssf6cm6'
 CLOUDINARY_API_KEY='161164621541946'
 CLOUDINARY_API_SECRET='qRM_p7dTLhA0An1HKWnl9EqYngU'
-PORT=""
